# meeting-to-linear

./: .gitignore  README.md  SKILL.md  config.example.json  config_loader.py  requirements.txt
oss-config/: .env.example  README.md  process_meeting_video.py  pyproject.toml  qwen_asr.py  upload_to_oss.py
references/: api-config.md  api-usage.md  known-issues.md  label-ids.md  parent-child-issues.md  templates.md  user-mapping.md
scripts/: cleanup_issues.py  create_linear_issues.py  linear_graphql.py  list_issues.py  list_issues_simple.py  list_issues_todo.py  send_email.py  send_linear_notification.py
