[project]
name = "meeting-video-transcriber"
version = "0.2.0"
description = "Process meeting videos: local transcription with Qwen ASR, optional OSS upload"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "dashscope>=1.20.0",
    "srt>=3.5.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "silero-vad>=5.1",
    "pydub>=0.25.1",
    "tqdm>=4.66.0",
    "requests>=2.32.5",
    "numpy",
]

[project.optional-dependencies]
oss = ["oss2>=2.18.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["*.py"]
